--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Hari Mohan Thakur",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
